welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value à
	var x=à; var y=wh-1;
              ^